# Networking

./: .gitignore  CMakeLists.txt  README.md
src/client/: client.cpp  gui.cpp  gui.h  gui.hpp  gui.ui  lobby.cpp  lobby.h  lobby.ui  main.cpp  roomgame.cpp  roomgame.h  roomgame.ui  ui_gui.h  ui_lobby.h  ui_roomgame.h  ui_waitingroom.h  waitingroom.cpp  waitingroom.h  waitingroom.ui
src/res/: words.txt
src/server/: client.cpp  client.hpp  log.cpp  log.hpp  msgbuf.cpp  msgbuf.hpp  room.cpp  room.hpp  sender.hpp  server.cpp  server.hpp  words.cpp  words.hpp
